--- a/x11-plugins/gkrellm-mailwatch/ChangeLog
+++ b/x11-plugins/gkrellm-mailwatch/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for x11-plugins/gkrellm-mailwatch
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/gkrellm-mailwatch/ChangeLog,v 1.1 2002/08/30 01:49:27 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/gkrellm-mailwatch/ChangeLog,v 1.2 2002/09/12 04:42:33 owen Exp $
 
 *gkrellm-mailwatch-0.7.2 (26 Apr 2002)
+
+  11 Sep 2002; Owen Stampflee <owen@gentoo.org> :
+  Added PPC to KEYWORDS.
 
   29 Aug 2002; Seemant Kulleen <seemant@gentoo.org> * :
 
