--- a/dev-java/jikes/ChangeLog
+++ b/dev-java/jikes/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for dev-java/jikes
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jikes/ChangeLog,v 1.3 2002/07/26 10:55:41 blizzy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jikes/ChangeLog,v 1.4 2002/09/14 17:18:40 owen Exp $
 
 *jikes-1.16 (26 Jul 2002)
+
+  13 Sep 2002; Owen Stampflee <owen@gentoo.org> :
+  Added PPC to KEYWORDS.
 
   26 Jul 2002; Maik Schreiber <blizzy@gentoo.org>:
 
