--- a/media-libs/zvbi/ChangeLog
+++ b/media-libs/zvbi/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for media-libs/zvbi
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/zvbi/ChangeLog,v 1.1 2002/07/16 21:49:36 stroke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/zvbi/ChangeLog,v 1.2 2002/09/15 10:50:12 spider Exp $
 
+*zvbi-0.2.1-r1 (15 Sep 2002)
+  15 Sep 2002; Spider <spider@gentoo.org> zvbi-0.2.1-r1.ebuild :
+  fix for zdoc and gtk-doc location
+  
 *zvbi-0.2.1 (16 Jul 2002)
 
   16 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> zvbi-0.2.1.ebuild :
