--- a/gnome-base/gnome/ChangeLog
+++ b/gnome-base/gnome/ChangeLog
@@ -1,7 +1,10 @@
 # ChangeLog for gnome-base/gnome
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.38 2002/09/14 22:57:44 spider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome/ChangeLog,v 1.39 2002/09/15 20:47:15 spider Exp $
 
+*gnome-2.0.2 (15 Sep 2002)
+  15 Sep 2002; Spider <spider@gentoo.org> gnome-2.0.2.ebuild :
+  back in style
 
 *gnome-2.0.2_rc1-r1 (14 Sep 2002)
   14 Sep 2002; Spider <spider@gentoo.org>
