--- a/app-admin/openmosixview/ChangeLog
+++ b/app-admin/openmosixview/ChangeLog
@@ -1,6 +1,6 @@
-# ChangeLog for app-admin/chkrootkit
+# ChangeLog for app-admin/openmosixview
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/openmosixview/Attic/ChangeLog,v 1.1 2002/09/18 17:52:51 tantive Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/openmosixview/Attic/ChangeLog,v 1.2 2002/09/18 17:54:47 tantive Exp $
 
 *openmosixview-1.2 (18 Sep 2002)
   
