--- a/sys-kernel/lolo-sources/ChangeLog
+++ b/sys-kernel/lolo-sources/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-kernel/lolo-sources
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/lolo-sources/Attic/ChangeLog,v 1.5 2002/09/19 07:39:39 lostlogic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/lolo-sources/Attic/ChangeLog,v 1.6 2002/09/19 07:40:49 lostlogic Exp $
 
 *lolo-sources-2.4.19.10_pre1 (19 Sep 2002)
 
@@ -30,6 +30,7 @@
   - incorporate ACPI from acpi.sourceforge.net
   - Possibly other, depending on stability, timing, and how much I get
     harrassed about things :)
+  - Fix compilation issues with sim710 and i810dma (I hope)
 
 *lolo-sources-2.4.19.9_rc2 (02 Sep 2002)
 
