--- a/net-mail/cyrus-imapd/ChangeLog
+++ b/net-mail/cyrus-imapd/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for net-mail/cyrus-imapd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/cyrus-imapd/ChangeLog,v 1.10 2002/09/16 18:35:47 raker Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/cyrus-imapd/ChangeLog,v 1.11 2002/09/23 17:29:34 raker Exp $
 
 *cyrus-imapd-2.1.9 (10 Sep 2002)
+
+  23 Sep 2002; Nick Hadaway <raker@gentoo.org> files/cyrus.conf :
+  Changed imap and pop3 listen port names to imap2 and pop-3.  See bug
+  #7178 for further information.
 
   16 Sep 2002; Nick Hadaway <raker@gentoo.org> cyrus-imapd-2.1.9.ebuild :
   Updated src_install() to delete the empty /var/log{auth,imapd}.log
