--- a/sys-devel/sparc32/ChangeLog
+++ b/sys-devel/sparc32/ChangeLog
@@ -1,14 +1,15 @@
 # ChangeLog for sys-devel/sparc32
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/sparc32/Attic/ChangeLog,v 1.1 2002/08/25 13:30:44 murphy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/sparc32/Attic/ChangeLog,v 1.2 2002/09/27 00:38:09 murphy Exp $
 
 *sparc32-1.1 (20 Aug 2002)
 
-  21 Aug 2002; Sean Summers <ebuild-sparc32@generalprotectionfault.com>
+  27 Sep 2002; Maarten Thibaut <murphy@gentoo.org> sparc32-1.1.ebuild: Adding
+  SLOT statement as reminded by George Shapovalov <georges@its.caltech.edu>.
 
+  21 Aug 2002; Sean Summers <ebuild-sparc32@generalprotectionfault.com> sparc32-1.1.ebuild:
   Included patches from Jakub Jelinek's <jakub@redhat.com> RPM spec.
   Found at ftp://auroralinux.org/pub/aurora/build-0.31/en/os/sparc/SRPMS/
 
-  20 Aug 2002; Sean Summers <ebuild-sparc32@generalprotectionfault.com>
-
+  20 Aug 2002; Sean Summers <ebuild-sparc32@generalprotectionfault.com> sparc32-1.1.ebuild:
   Initial package
 
