--- a/app-admin/monit/ChangeLog
+++ b/app-admin/monit/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/monit
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/monit/ChangeLog,v 1.7 2004/04/13 13:23:58 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/monit/ChangeLog,v 1.8 2004/06/01 21:14:04 squash Exp $
+
+  01 Jun 2004; Josh Grebe <squash@gentoo.org> monit-4.2.1.ebuild:
+  Stable on sparc
 
   13 Apr 2004; David Holm <dholm@gentoo.org> monit-4.2.1.ebuild:
   Added to ~ppc.
