--- a/app-admin/conserver/ChangeLog
+++ b/app-admin/conserver/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/conserver
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/conserver/ChangeLog,v 1.19 2004/05/30 17:51:26 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/conserver/ChangeLog,v 1.20 2004/06/01 22:26:51 agriffis Exp $
+
+  01 Jun 2004; Aron Griffis <agriffis@gentoo.org> conserver-8.1.7.ebuild:
+  Fix use invocation
 
 *conserver-8.1.7 (30 May 2004)
 
