--- a/games-fps/americas-army/ChangeLog
+++ b/games-fps/americas-army/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for games-fps/americas-army
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/americas-army/Attic/ChangeLog,v 1.14 2004/04/19 15:40:59 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/americas-army/Attic/ChangeLog,v 1.15 2004/06/02 00:58:43 wolf31o2 Exp $
+
+*americas-army-210 (01 Jun 2004)
+
+  01 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  +americas-army-210.ebuild:
+  Adding America's Army 2.1.0 to portage... Hooah!
 
   19 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   americas-army-200a-r1.ebuild:
