--- a/app-emacs/yatex/ChangeLog
+++ b/app-emacs/yatex/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/yatex
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/yatex/ChangeLog,v 1.7 2004/04/04 17:01:08 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/yatex/ChangeLog,v 1.8 2004/06/02 01:49:14 agriffis Exp $
+
+  01 Jun 2004; Aron Griffis <agriffis@gentoo.org> yatex-1.71.ebuild,
+  yatex-1.72.ebuild:
+  Fix use invocation
 
   05 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> yatex-1.71.ebuild,
   yatex-1.72.ebuild:
