--- a/app-gnustep/pantomime/ChangeLog
+++ b/app-gnustep/pantomime/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-gnustep/pantomime
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-gnustep/cvs-repo/gentoo-x86/app-gnustep/pantomime/Attic/ChangeLog,v 1.7 2004/05/04 16:06:47 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-gnustep/cvs-repo/gentoo-x86/app-gnustep/pantomime/Attic/ChangeLog,v 1.8 2004/06/02 01:53:51 agriffis Exp $
+
+  01 Jun 2004; Aron Griffis <agriffis@gentoo.org> pantomime-1.1.0.ebuild:
+  Fix use invocation
 
   04 May 2004; Bryan Østergaard <kloeri@gentoo.org> pantomime-1.1.0.ebuild,
   pantomime-1.1.0_pre2.ebuild:
