--- a/app-i18n/canna/ChangeLog
+++ b/app-i18n/canna/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/canna
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/canna/ChangeLog,v 1.37 2004/05/18 22:32:04 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/canna/ChangeLog,v 1.38 2004/06/02 02:04:46 agriffis Exp $
+
+  01 Jun 2004; Aron Griffis <agriffis@gentoo.org> canna-3.6_p4.ebuild,
+  canna-3.7.ebuild, canna-3.7_p1.ebuild, canna-3.7_p2.ebuild:
+  Fix use invocation
 
 *canna-3.7_p2 (19 May 2004)
 
