--- a/net-misc/cisco-aironet-client-utils/ChangeLog
+++ b/net-misc/cisco-aironet-client-utils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/cisco-aironet-client-utils
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/cisco-aironet-client-utils/Attic/ChangeLog,v 1.3 2004/06/01 19:07:08 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/cisco-aironet-client-utils/Attic/ChangeLog,v 1.4 2004/06/02 02:44:16 wolf31o2 Exp $
+
+  01 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  cisco-aironet-client-utils-2.1.ebuild:
+  Fixing problem with S and closing bug #52731.
 
 *cisco-aironet-client-utils-2.1 (01 Jun 2004)
 
