--- a/net-dns/bind-tools/ChangeLog
+++ b/net-dns/bind-tools/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/bind-tools
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.23 2004/05/15 21:50:58 kumba Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-dns/cvs-repo/gentoo-x86/net-dns/bind-tools/ChangeLog,v 1.24 2004/06/02 02:56:18 tgall Exp $
+
+  01 Jun 2004; Tom Gall <tgall@gentoo.org> bind-tools-9.2.3-r1.ebuild:
+  stable on ppc64, bug #52706
 
   15 May 2004; Joshua Kinard <kumba@gentoo.org> bind-tools-9.2.3-r1.ebuild:
   Marked stable on mips.
