--- a/sys-libs/glibc/ChangeLog
+++ b/sys-libs/glibc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/glibc
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.160 2004/05/30 15:18:39 lv Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.161 2004/06/02 09:35:44 kumba Exp $
+
+  02 Jun 2004; Joshua Kinard <kumba@gentoo.org>
+  glibc-2.3.3_pre20040529.ebuild:
+  Added ~mips to KEYWORDS.
 
   30 May 2004; Travis Tilley <lv@gentoo.org> glibc-2.3.3_pre20040529.ebuild:
   adding ~amd64 and ~ppc64 to keywords
