--- a/dev-util/monodevelop/ChangeLog
+++ b/dev-util/monodevelop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/monodevelop
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/monodevelop/ChangeLog,v 1.5 2004/06/02 16:08:34 latexer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/monodevelop/ChangeLog,v 1.6 2004/06/02 16:43:24 latexer Exp $
+
+  02 Jun 2004; Peter Johanson <latexer@gentoo.org> monodevelop-0.2.ebuild:
+  Removing all pre-Beta1 mono stuff.
 
 *monodevelop-0.4 (02 Jun 2004)
 
