--- a/net-www/fnord/ChangeLog
+++ b/net-www/fnord/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-www/fnord
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/fnord/Attic/ChangeLog,v 1.12 2004/03/25 21:40:42 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/fnord/Attic/ChangeLog,v 1.13 2004/06/02 21:54:44 hansmi Exp $
+
+  02 Jun 2004; Michael hanselmann <hansmi@gentoo.org> fnord-1.8.ebuild:
+  Added ~ppc to KEYWORDS
 
   25 Mar 2004; Jason Wever <weeve@gentoo.org> fnord-1.8.ebuild:
   Added fix for bug #45716.
