--- a/dev-java/commons-beanutils/ChangeLog
+++ b/dev-java/commons-beanutils/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/commons-beanutils
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-beanutils/ChangeLog,v 1.10 2004/01/21 02:48:49 strider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-beanutils/ChangeLog,v 1.11 2004/06/03 02:04:11 agriffis Exp $
+
+  02 Jun 2004; Aron Griffis <agriffis@gentoo.org>
+  commons-beanutils-1.6.1-r1.ebuild:
+  Fix use invocation
 
 *commons-beanutils-1.6.1-r1 (20 Jan 2004)
 
