--- a/dev-java/xerces/ChangeLog
+++ b/dev-java/xerces/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/xerces
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/xerces/ChangeLog,v 1.21 2004/05/05 20:10:50 karltk Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/xerces/ChangeLog,v 1.22 2004/06/03 03:12:33 agriffis Exp $
+
+  02 Jun 2004; Aron Griffis <agriffis@gentoo.org> xerces-2.6.0.ebuild,
+  xerces-2.6.1.ebuild, xerces-2.6.2-r1.ebuild, xerces-2.6.2.ebuild:
+  Fix use invocation
 
 *xerces-2.6.2-r1 (05 May 2004)
 
