--- a/mail-filter/dcc/ChangeLog
+++ b/mail-filter/dcc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/dcc
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/dcc/ChangeLog,v 1.1 2004/06/03 07:04:52 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/dcc/ChangeLog,v 1.2 2004/06/03 07:25:38 seemant Exp $
+
+  03 Jun 2004; Seemant Kulleen <seemant@gentoo.org> dcc-1.2.28.ebuild:
+  Change DEPENDency from net-mail/procmail to mail-filter/procmail
 
 *dcc-1.2.28 (03 Jun 2004)
 
