--- a/dev-tcltk/tkTheme/ChangeLog
+++ b/dev-tcltk/tkTheme/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-tcltk/tkTheme
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/tkTheme/ChangeLog,v 1.5 2004/04/04 23:01:48 zx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-tcltk/cvs-repo/gentoo-x86/dev-tcltk/tkTheme/ChangeLog,v 1.6 2004/06/03 09:19:03 kloeri Exp $
+
+  03 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> tkTheme-1.0.ebuild:
+  Stable on alpha.
 
   04 Apr 2004; Chris Aniszczyk <zx@gentoo.org> metadata.xml,
   tkTheme-1.0.ebuild:
