--- a/app-cdr/kcdlabel/ChangeLog
+++ b/app-cdr/kcdlabel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/kcdlabel
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/kcdlabel/Attic/ChangeLog,v 1.5 2004/05/16 20:17:53 centic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/kcdlabel/Attic/ChangeLog,v 1.6 2004/06/03 14:25:20 dholm Exp $
+
+  03 Jun 2004; David Holm <dholm@gentoo.org> kcdlabel-2.12.ebuild:
+  Added to ~ppc.
 
   16 May 2004; Dominik Stadler <centic@gentoo.org> +metadata.xml,
   kcdlabel-2.11.ebuild, kcdlabel-2.12.ebuild:
