--- a/games-board/atakks/ChangeLog
+++ b/games-board/atakks/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-board/atakks
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/atakks/ChangeLog,v 1.1 2004/06/02 08:29:58 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/atakks/ChangeLog,v 1.2 2004/06/03 14:27:04 dholm Exp $
+
+  03 Jun 2004; David Holm <dholm@gentoo.org> atakks-1.0.ebuild:
+  Added to ~ppc.
 
 *atakks-1.0 (02 Jun 2004)
 
