--- a/app-arch/gtk-splitter/ChangeLog
+++ b/app-arch/gtk-splitter/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/gtk-splitter
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/gtk-splitter/ChangeLog,v 1.2 2004/06/01 21:33:51 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/gtk-splitter/ChangeLog,v 1.3 2004/06/03 15:58:30 dholm Exp $
+
+  03 Jun 2004; David Holm <dholm@gentoo.org> gtk-splitter-2.2.ebuild:
+  Added to ~ppc.
 
   01 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org>
   gtk-splitter-2.2.ebuild:
