--- a/dev-libs/zthread/ChangeLog
+++ b/dev-libs/zthread/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/zthread
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/zthread/ChangeLog,v 1.9 2004/05/23 23:49:56 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/zthread/ChangeLog,v 1.10 2004/06/03 16:39:22 agriffis Exp $
+
+  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> zthread-1.5.3.ebuild:
+  Fix use invocation
 
   24 May 2004; Bryan Østergaard <kloeri@gentoo.org> zthread-2.3.1.ebuild:
   Stable on alpha.
