--- a/dev-java/jai/ChangeLog
+++ b/dev-java/jai/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jai
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jai/Attic/ChangeLog,v 1.3 2004/03/19 21:22:18 lostlogic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jai/Attic/ChangeLog,v 1.4 2004/06/03 18:29:22 karltk Exp $
+
+  03 Jun 2004; Karl Trygve Kalleberg <karltk@gentoo.org> jai-1.1.2.ebuild,
+  jar-1.1.2-r1.ebuild: Removed.
 
 *jai-1.1.2-r2 (19 Mar 2004)
 
