--- a/games-board/crafty/ChangeLog
+++ b/games-board/crafty/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-board/crafty
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/crafty/ChangeLog,v 1.5 2004/04/06 07:30:51 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/crafty/ChangeLog,v 1.6 2004/06/03 19:34:06 agriffis Exp $
+
+  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> crafty-19.8.ebuild:
+  Fix use invocation
 
 *crafty-19.12 (06 Apr 2004)
 
