--- a/games-fps/rtcw/ChangeLog
+++ b/games-fps/rtcw/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/rtcw
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/rtcw/ChangeLog,v 1.11 2004/04/24 15:26:39 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/rtcw/ChangeLog,v 1.12 2004/06/03 19:56:04 agriffis Exp $
+
+  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> rtcw-1.41.ebuild:
+  Fix use invocation
 
   24 Apr 2004; Chris Gianelloni <wolf31o2@gentoo.org> rtcw-1.41.ebuild:
   Adding wolfmp wolfsp einfo at end of install and closing bug #48864.
