--- a/net-analyzer/ethereal/ChangeLog
+++ b/net-analyzer/ethereal/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/ethereal
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/ethereal/Attic/ChangeLog,v 1.64 2004/06/01 18:20:24 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/ethereal/Attic/ChangeLog,v 1.65 2004/06/03 20:47:02 lu_zero Exp $
+
+  03 Jun 2004; Luca Barbato <lu_zero@gentoo.org> ethereal-0.10.4.ebuild:
+  Marked ppc
 
   01 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> ethereal-0.10.4.ebuild:
   Stable on alpha, see bug 51022.
