--- a/games-strategy/dopewars/ChangeLog
+++ b/games-strategy/dopewars/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/dopewars
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/dopewars/ChangeLog,v 1.8 2004/03/24 05:09:26 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-strategy/cvs-repo/gentoo-x86/games-strategy/dopewars/ChangeLog,v 1.9 2004/06/03 21:08:25 agriffis Exp $
+
+  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> dopewars-1.5.9.ebuild:
+  Fix use invocation
 
   23 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> dopewars-1.5.9.ebuild:
   don't rdepend on sed
