--- a/gnome-base/libgtop/ChangeLog
+++ b/gnome-base/libgtop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libgtop
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgtop/ChangeLog,v 1.46 2004/05/29 03:46:50 pvdabeel Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libgtop/ChangeLog,v 1.47 2004/06/03 22:36:49 agriffis Exp $
+
+  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> libgtop-1.0.13-r2.ebuild:
+  Fix use invocation
 
   29 May 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
   libgtop-2.6.0.ebuild:
