--- a/dev-db/sqlite/ChangeLog
+++ b/dev-db/sqlite/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.28 2004/05/26 00:37:15 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.29 2004/06/03 23:35:49 geoman Exp $
+
+  03 Jun 2004; Stephen P. Becker <geoman@gentoo.org> sqlite-2.8.11.ebuild:
+  Stable on mips.
 
 *sqlite-2.8.3 (25 May 2004)
 
