--- a/dev-libs/libcroco/ChangeLog
+++ b/dev-libs/libcroco/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libcroco
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libcroco/ChangeLog,v 1.7 2004/04/30 13:13:08 latexer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libcroco/ChangeLog,v 1.8 2004/06/04 04:15:06 geoman Exp $
+
+  04 Jun 2004; Stephen P. Becker <geoman@gentoo.org> libcroco-0.5.1.ebuild:
+  Stable on mips.
 
 *libcroco-0.5.1 (30 Apr 2004)
 
