--- a/gnome-base/libbonobo/ChangeLog
+++ b/gnome-base/libbonobo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/libbonobo
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.54 2004/06/01 04:00:46 lv Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/libbonobo/ChangeLog,v 1.55 2004/06/04 04:10:45 geoman Exp $
+
+  04 Jun 2004; Stephen P. Becker <geoman@gentoo.org> libbonobo-2.6.0.ebuild:
+  Stable on mips.
 
   31 May 2004; Travis Tilley <lv@gentoo.org> libbonobo-2.6.2.ebuild:
   libbonobo 2.6.2 breaks evolution on amd64, and possibly other applications as
