--- a/net-analyzer/gnome-netstatus/ChangeLog
+++ b/net-analyzer/gnome-netstatus/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/gnome-netstatus
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/gnome-netstatus/ChangeLog,v 1.10 2004/05/25 11:37:47 gmsoft Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/gnome-netstatus/ChangeLog,v 1.11 2004/06/04 04:40:45 geoman Exp $
+
+  04 Jun 2004; Stephen P. Becker <geoman@gentoo.org>
+  gnome-netstatus-2.6.0.1.ebuild:
+  Stable on mips.
 
   25 May 2004; Guy Martin <gmsoft@gentoo.org> gnome-netstatus-2.6.0.1.ebuild,
   gnome-netstatus-2.6.1.ebuild:
