--- a/app-laptop/powerprefs/ChangeLog
+++ b/app-laptop/powerprefs/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-laptop/powerprefs
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/powerprefs/ChangeLog,v 1.3 2004/04/11 14:47:07 pylon Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/powerprefs/ChangeLog,v 1.4 2004/06/04 05:13:48 dostrow Exp $
+
+*powerprefs-0.4.5 (04 Jun 2004)
+
+  04 Jun 2004; Daniel Ostrow <dostrow@gentoo.org> powerprefs-0.4.5.ebuild:
+  Version bump & Copyright header fixes
 
 *powerprefs-0.4.4 (11 Apr 2004)
 
