--- a/dev-util/netbeans/ChangeLog
+++ b/dev-util/netbeans/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/netbeans
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/netbeans/ChangeLog,v 1.18 2004/04/26 22:13:25 lostlogic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/netbeans/ChangeLog,v 1.19 2004/06/04 07:58:18 kloeri Exp $
+
+  04 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> netbeans-3.5.1.ebuild:
+  Stable on alpha.
 
 *netbeans-3.6-r1 (26 Apr 2004)
 
